<resources>
    <string name="app_name">Obama</string>
    <string name="barack_obama">Gagan Thapa</string>
    <string name="Nepali_congress">Nepali Congress</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="how_to">Connect With Me  </string>
    <string name="agenda">AGENDA</string>
    <string name="padna_ko_lagi">Click the button below to study more.</string>
    <string name="news">News and announcement</string>
    <string name="obama">Obama criticised for"$40,000 wall street speech</string>


    <string name="obama_sub" formatted="false">former us president barack obama is being criticised for\  reportedly  agreeing a $400000 wall street speech</string>
    <string name="title_activity_navigation_drawer">Navigation_drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_biography">MY BIOGRAPHY</string>
    <string name="question_answer">QUESTION ANSWER</string>
    <string name="notifications">NOTIFICATION</string>
    <string name="my_news">NEWS</string>
    <string name="maps">MAPS</string>
    <string name="questionAnswer">Question With Me</string>
    <string name="askQuestion">Ask Your Question?</string>
    <string name="how_does_it1">Initiate a discussion or get involved\for discussion</string>
    <string name="how_does_it2">Once a part of a group,members get\n an opporunity to contribute and\shine.</string>
    <string name="Gallery">GALLERY</string>
    <string name="social_media">SOCIAL MEDIA</string>
    <string name="bio_para_1">lorum sum</string>
    <string name="status">Tonight at 9 pm.Eastern Time,president\Obama delivers his farewell address in\chicago.\
    Don't miss it.
</string>
    <string name="notification3">NC candidate Thapa discharged from hospital</string>
    <string name="notification4">Nepali Congress (NC) federal parliament candidate from Kathmandu constituency-4 Gagan Thapa,\ who was receiving treatment at the Tribhuvan University Teaching Hospital\ (TUTH) following a bomb explosion at Chapali height,\ Narayansthan on Monday afternoon, has been discharged from the hospital.
    </string>
    <string name="notification2">As two youth leaders—Gagan Thapa of the Nepali Congress and Rajan Bhattarai of the left alliance—\slug it out in Kathmandu-4, voters have a difficult choice to make.\ While people see both leaders as “capable” who can deliver, \they are confused over whom to select among the two “competent” leaders.</string>
    <string name="bio1">Gagan Thapa (Nepali: गगन थापा) is Nepali Congress politician. \He is former Minister for Health and Population of Nepal.\ He is also a current member of Legislature Parliament of Nepal,\ and a member of the Central Working Committee of the Nepali Congress Party.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bio2">He completed 10th standard (referred formerly as SLC in Nepal) from Siddhartha Vanasthli School Balaju, Kathmandu.\ He completed his 10+2 (referred formerly as I.Sc.) and BA in Sociology from Tri-Chandra College, Gantaghar, Kathmandu.\ He joined MA in Rural Development in Tribhuwan University and dropped the course to join Master’s in Political Science where he sees his field of interest.\He has completed his Master's Degree in Political Science from Tribhuwan University.\ He once planned to acquire a PhD in Political Economy from Jawaharlal Nehru University in India. This was not possible as he has now been engaged in active politics representing Nepali Congress, \which is a political party laid in the principles of democracy in Nepal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_leaders_map">Map</string>
    <string name="title_activity_maps">Maps</string>
    <string name="question">What is lorum espum?</string>
    <string name="answer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer Etook a galley of type and scrambled it to make a type specimen book. </string>
    <string name="title_activity_demo_scrolling">DemoScrollingActivity</string>
    <string name="notification1">Thapa fights to retain repute.
    </string>
    <string name="news2">As two youth leaders,gagan thapa of the Nepali Congress and Rajan Bhattarai of the left alliance slug it out in kathmandu-4.</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
