<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dell.obama.app.Notification_activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backButtonImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Notifications"
                android:textColor="@color/color_white"
                android:textSize="16sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colo_notify"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/notification1"
                android:textStyle="bold"
                android:id="@+id/notification1"/>
            <com.github.rpradal.lettrine.LettrineTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letterine"
                android:text="@string/notification2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:lettrine_lettrineSize="4"
                app:lettrine_textSize="14sp"
                android:padding="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colo_notify"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/notification3"
                android:textStyle="bold"
                android:id="@+id/notification3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification2"
                android:fitsSystemWindows="true"
                android:justificationMode="inter_word"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
