<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.obama.app.Connect_with_me">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/gagan_thapa"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio1"
                android:padding="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HOW DOES IT WORK"
                android:textColor="@color/color_blacl"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginLeft="8dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/color_blacl"
                android:layout_margin="8dp"></View>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_two"
                    android:id="@+id/image_one"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_does_it1"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_two"
                    android:id="@+id/image_two"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_does_it2"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="@color/color_blacl"></View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already a member?"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:textColor="@color/color_blacl"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_text_audio_video"
                android:layout_margin="8dp"
                android:text="sign in"
                android:textColor="@color/color_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New to My Network?"
                android:padding="8dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/color_blacl"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Join Now"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:background="@color/color_text_audio_video"/>
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
